k8s/base/monadium/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "monadium-deployment"
  namespace: "default"
  labels:
    app: "monadium"
spec:
  selector:
    matchLabels:
      app: "monadium"
  replicas: 1
  template:
    metadata:
      labels:
        app: "monadium"
    spec:
      containers:
        - image: var-image
          name: monadium
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              mimory: "512Mi"
            cpu: "500m"
