k8s/base/monadium/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "monadium-service"
  namespace: "default"
  labels:
    app: "monadium"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  selector:
    app: "monadium"
  type: "LoadBalancer"
  loadBalancerIP: ""
