k8s/base/monadium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monadium-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: monadium-ip-address
    networking.gke.io/managed-certificates: monadium-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: monadium-service
                port:
                  number: 80
